[gd_scene load_steps=11 format=3 uid="uid://bh4dgch0so1y3"]

[ext_resource type="Script" uid="uid://ctubsw456eqic" path="res://ui/main_menu/main_menu.gd" id="1_3shxk"]
[ext_resource type="Texture2D" uid="uid://bn3whuxbltdyy" path="res://ui/main_menu/Starfield_08-1024x1024.png" id="1_oa53l"]
[ext_resource type="Script" uid="uid://ca4hqlffy4xdb" path="res://world/controlled_camera.gd" id="2_d3a7t"]
[ext_resource type="FontFile" uid="uid://c1ibn4h8cwck8" path="res://ui/theme/font/Kenney Future.ttf" id="4_3c04x"]
[ext_resource type="Script" uid="uid://be5ehb5p15do1" path="res://ui/main_menu/profile_edit.gd" id="4_i5wg5"]
[ext_resource type="Texture2D" uid="uid://coso6jxfse7iw" path="res://ui/ui_icons/profile.png" id="5_joh67"]
[ext_resource type="Script" uid="uid://levu7hk8s356" path="res://ui/main_menu/host.gd" id="7_u184e"]
[ext_resource type="Script" uid="uid://7vbcverqb7xf" path="res://ui/main_menu/join.gd" id="8_6mijq"]

[sub_resource type="LabelSettings" id="LabelSettings_joh67"]
font = ExtResource("4_3c04x")
font_size = 128
font_color = Color(0, 0, 0, 0)
outline_size = 8

[sub_resource type="ViewportTexture" id="ViewportTexture_joh67"]
viewport_path = NodePath("Profile/SubViewport")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3shxk")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Sprite2D" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
texture_repeat = 2
position = Vector2(-28, -52)
texture = ExtResource("1_oa53l")
region_enabled = true
region_rect = Rect2(0, 0, 131072, 131072)

[node name="ControlledCamera" type="Camera2D" parent="SubViewportContainer/SubViewport"]
limit_left = -65536
limit_top = -65536
limit_right = 65536
limit_bottom = 65536
editor_draw_screen = false
editor_draw_limits = true
script = ExtResource("2_d3a7t")
clamp_zoom = true
min_zoom = 0.5
max_zoom = 5.0
metadata/_custom_type_script = "uid://ca4hqlffy4xdb"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.5
offset_top = -135.756
offset_right = 500.5
offset_bottom = 135.756
grow_horizontal = 2
grow_vertical = 2
text = "DISPOSABLE"
label_settings = SubResource("LabelSettings_joh67")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Host" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "HOST MATCH"

[node name="Join" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "JOIN MATCH"

[node name="Freeplay" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "FreePlay"

[node name="Profile" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 72.0
grow_horizontal = 0
theme_override_constants/align_to_largest_stylebox = 2
text = "billl"
icon = SubResource("ViewportTexture_joh67")
alignment = 2

[node name="SubViewport" type="SubViewport" parent="Profile"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(32, 32)
size_2d_override = Vector2i(32, 32)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Sprite2D" type="Sprite2D" parent="Profile/SubViewport"]
scale = Vector2(0.125, 0.125)
texture = ExtResource("5_joh67")
centered = false

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -74.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Settings" type="Button" parent="MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Settings"

[node name="ProfileEdit" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145, 0.145, 0.145, 0.788)
script = ExtResource("4_i5wg5")
metadata/_custom_type_script = "uid://dmnpfgvxyhg8k"

[node name="ProfileEdit" type="PanelContainer" parent="ProfileEdit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -37.0
offset_right = 300.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatGrayPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="ProfileEdit/ProfileEdit"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="ProfileEdit/ProfileEdit/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ProfileEdit/ProfileEdit/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "DISPLAY NAME"

[node name="NameEdit" type="LineEdit" parent="ProfileEdit/ProfileEdit/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "Name"

[node name="Host" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145, 0.145, 0.145, 0.788)
script = ExtResource("7_u184e")
metadata/_custom_type_script = "uid://dmnpfgvxyhg8k"

[node name="PanelContainer" type="PanelContainer" parent="Host"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -56.0
offset_right = 212.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"GrayPanelContainer"

[node name="VBoxContainer" type="VBoxContainer" parent="Host/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Host/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Host/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Host/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Password"

[node name="LineEdit" type="LineEdit" parent="Host/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "none"

[node name="Host" type="Button" parent="Host/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Host"

[node name="Join" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145, 0.145, 0.145, 0.788)
script = ExtResource("8_6mijq")
metadata/_custom_type_script = "uid://dmnpfgvxyhg8k"

[node name="PanelContainer" type="PanelContainer" parent="Join"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -54.0
offset_right = 126.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"GrayPanelContainer"

[node name="Join" type="Button" parent="Join/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "JOIN LOCAL"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Freeplay" to="." method="_on_freeplay_pressed"]
[connection signal="pressed" from="Profile" to="." method="_on_profile_pressed"]
[connection signal="pressed" from="MarginContainer3/Settings" to="." method="_on_settings_pressed"]
[connection signal="text_changed" from="ProfileEdit/ProfileEdit/MarginContainer/HBoxContainer/NameEdit" to="ProfileEdit" method="_on_name_edit_text_changed"]
[connection signal="text_submitted" from="ProfileEdit/ProfileEdit/MarginContainer/HBoxContainer/NameEdit" to="ProfileEdit" method="_on_name_edit_text_submitted"]
[connection signal="text_changed" from="Host/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/LineEdit" to="Host" method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Host/PanelContainer/VBoxContainer/Host" to="Host" method="_on_host_pressed"]
[connection signal="pressed" from="Join/PanelContainer/Join" to="Join" method="_on_join_pressed"]
